--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "boilerplate-front-end",
   "version": "0.1.0",
   "private": true,
-   "dependencies": {
+  "dependencies": {
+    "@chakra-ui/icons": "^2.0.1",
     "@chakra-ui/react": "^2.1.0",
     "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.8.1",
@@ -12,6 +13,7 @@
     "axios": "^0.24.0",
     "formik": "^2.2.9",
     "framer-motion": "^6.3.3",
+    "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "6",
