--- a/package.json
+++ b/package.json
@@ -4,20 +4,24 @@
   "private": true,
   "dependencies": {
     "@chakra-ui/icons": "^2.0.1",
-    "@chakra-ui/react": "^2.1.0",
-    "@emotion/react": "^11.9.0",
-    "@emotion/styled": "^11.8.1",
+    "@chakra-ui/react": "^2.2.1",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.24.0",
+    "chakra": "^0.0.3",
     "formik": "^2.2.9",
-    "framer-motion": "^6.3.3",
+    "framer-motion": "^6.3.16",
+    "javascript-time-ago": "^2.5.5",
     "prettier": "^2.6.2",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.33.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.0",
+    "react-time-ago": "^7.2.1",
     "styled-components": "^5.3.3",
     "yup": "^0.32.11"
   },
